# FastPegSolitaire

./: .clang-format  .nvim-dap.lua  CMakeLists.txt  README.md  main.cpp  main_constexpr.cpp
src/: CMakeLists.txt  FastPegSolitaire.hpp
